--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="big-title text-center">
-                            <h1>iVES</h1>
+                            <h1><strong>iVES</strong></h1>
                             <p class="lead">Documentação do Middleware iVES</p>
                         </div>
                         <!-- end title -->
